--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -16,7 +16,7 @@
             android:id="@+id/layoutOverview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:orientation="vertical">
 
             <TextView
@@ -31,6 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Touch to view expense status"
                 android:textSize="18sp" />
 
@@ -57,12 +58,12 @@
             android:id="@+id/layoutHistory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:text="Daily seed"
                 android:textAllCaps="true"
                 android:textSize="30sp"
@@ -71,6 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Touch to view your goals"
                 android:textSize="18sp" />
 
@@ -83,7 +85,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvDailySeed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp" />
 
         </LinearLayout>
 
@@ -91,7 +94,7 @@
             android:id="@+id/layoutDiary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="45dp"
             android:orientation="vertical">
 
             <TextView
@@ -105,6 +108,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Touch to view your loans"
                 android:textSize="18sp" />
 
@@ -117,7 +121,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvFamilySharing"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp" />
 
         </LinearLayout>
     </LinearLayout>
