--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:fontFamily">@font/product_sans</item>
+        <item name="android:fontFamily">@font/roboto</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:textColor">#ffffff</item>
     </style>
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:fontFamily">@font/product_sans</item>
+        <item name="android:fontFamily">@font/roboto</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">18sp</item>
