--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home"
-            android:title="Home" />
-    </group>
+    <item
+        android:id="@+id/nav_wallet"
+        android:title="Wallet" />
+    <item
+        android:id="@+id/nav_plan"
+        android:title="Plan" />
+    <item
+        android:id="@+id/nav_library"
+        android:title="Library" />
+    <item
+        android:id="@+id/nav_community"
+        android:title="Community" />
+    <item
+        android:id="@+id/nav_about"
+        android:title="About us" />
 
-    <item android:title="Other">
-        <menu>
-            <item
-                android:id="@+id/nav_fanpage"
-                android:icon="@drawable/ic_facebook"
-                android:title="Fanpage" />
-        </menu>
-    </item>
+    <item
+        android:id="@+id/nav_contact"
+        android:title="Contact" />
 
+    <item
+        android:id="@+id/nav_setting"
+        android:title="Setting" />
+    <item
+        android:id="@+id/nav_log_out"
+        android:title="Log out" />
 </menu>
