--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -19,15 +19,14 @@
             android:paddingEnd="10dp"
             android:paddingStart="0dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/imageViewAvatar"
                 android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher" />
+                android:background="@drawable/alice" />
 
             <TextView
                 android:id="@+id/tvMessage"
