--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="200dp"
     android:background="@drawable/toolbar"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -27,7 +27,7 @@
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/avatar" />
     </FrameLayout>
 
     <TextView
@@ -39,4 +39,13 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/tim"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Level 1"
+        android:textColor="@color/tim"
+        android:textSize="12sp" />
 </LinearLayout>
