--- a/app/src/main/res/layout/widget_chathead.xml
+++ b/app/src/main/res/layout/widget_chathead.xml
@@ -2,13 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/info_text"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg_bot"
-    android:padding="20dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_send" />
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/alice" />
 </LinearLayout>
 
