--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -14,6 +14,9 @@
         android:id="@+id/nav_community"
         android:title="Community" />
     <item
+        android:id="@+id/nav_alice"
+        android:title="Alice" />
+    <item
         android:id="@+id/nav_about"
         android:title="About us" />
 
