--- a/app/src/main/res/layout/fragment_quiz_content.xml
+++ b/app/src/main/res/layout/fragment_quiz_content.xml
@@ -29,6 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:padding="10dp"
                     android:text="@string/app_name" />
             </FrameLayout>
 
@@ -38,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_answer"
+                android:padding="5dp"
                 android:text="@string/app_name"
                 android:textAllCaps="false" />
 
@@ -47,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_answer"
+                android:padding="5dp"
                 android:text="@string/app_name"
                 android:textAllCaps="false" />
 
@@ -56,6 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_answer"
+                android:padding="5dp"
                 android:text="@string/app_name"
                 android:textAllCaps="false" />
 
@@ -65,6 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_answer"
+                android:padding="5dp"
                 android:text="@string/app_name"
                 android:textAllCaps="false" />
 
